修复update数据库时List类型转为varchar类型出错的问题